[package]
name = "dokan-sys"
version = "0.3.1+dokan230"
authors = ["DDoSolitary <DDoSolitary@gmail.com>"]
description = "Raw FFI bindings for Dokan (user mode file system library for Windows)"
homepage = "https://dokan-dev.github.io"
repository = "https://github.com/dokan-dev/dokan-rust"
documentation = "https://dokan-dev.github.io/dokan-rust-doc/html/dokan_sys/"
keywords = ["ffi", "dokan", "bindings", "driver", "filesystem"]
categories = ["external-ffi-bindings"]
readme = "README.md"
license = "MIT"
edition = "2024"
links = "dokan"
build = "build.rs"

[badges]
appveyor = { repository = "Liryna/dokan-rust" }

[dependencies]
windows-sys = { version = "0.61", features = ["Win32_Foundation", "Win32_Storage_FileSystem", "Win32_Security", "Win32_System_IO", "Win32_System_Threading"] }

[build-dependencies]
cc = "1.2"

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
