[package]
name = "dokan"
version = "0.3.1+dokan230"
authors = ["DDoSolitary <DDoSolitary@gmail.com>"]
description = "Rust-friendly wrapper for Dokan (user mode file system library for Windows)"
homepage = "https://dokan-dev.github.io"
repository = "https://github.com/dokan-dev/dokan-rust"
documentation = "https://dokan-dev.github.io/dokan-rust-doc/html/dokan/"
keywords = ["dokan", "bindings", "driver", "filesystem"]
categories = ["external-ffi-bindings"]
readme = "README.md"
license = "MIT"
edition = "2024"

[badges]
appveyor = { repository = "Liryna/dokan-rust" }

[dependencies]
bitflags = "2.11"
dokan-sys = { path = "../dokan-sys" }
widestring = "1.2"
windows-sys = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_System_Environment",
    "Win32_System_IO",
    "Win32_System_Memory",
    "Win32_System_RemoteDesktop",
    "Win32_System_SystemServices",
    "Win32_System_Threading",
] }

[dev-dependencies]
clap = "4.5"
ctrlc = "3.4"
regex = "1.11"

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
